--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "casperboone/zabbix-graph",
+    "name": "janmuran/zabbix-graph",
     "description": "Get nice looking graphs of your Zabbix devices.",
     "keywords": [
         "Zabbix Graph"
     ],
-    "homepage": "https://github.com/casperboone/zabbix-graph",
+    "homepage": "https://github.com/janmuran/zabbix-graph",
     "license": "MIT",
     "authors": [
         {
@@ -15,22 +15,22 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "guzzlehttp/guzzle": "~6.1"
+        "php": "^8.0",
+        "guzzlehttp/guzzle": "~6.1|~7.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "^6.0",
+        "phpunit/phpunit": "^11.2.9",
         "vlucas/phpdotenv": "^2.4"
     },
     "autoload": {
         "psr-4": {
-            "CasperBoone\\ZabbixGraph\\": "src"
+            "Janmuran\\ZabbixGraph\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "CasperBoone\\ZabbixGraph\\Test\\": "tests"
+            "Janmuran\\ZabbixGraph\\Test\\": "tests"
         }
     },
     "scripts": {
